[package]
name = "crust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
rand = "0.8.4"
strum = "0.26.3"
strum_macros = "0.26.4"
csv = "1.3.1"
tracing = "0.1.41"
sysinfo = "0.33.1"
