[package]
name = "crust-http"
version = "0.1.0"
edition = "2021"

[dependencies]
crust-core = { path = "../crust-core" }
tokio = { version = "1.42.0", features = ["full"] }
axum = "0.7.9"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
once_cell = "1.8.0"
