[package]
name = "crust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
crust-core = { path = "../crust-core" }
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
kube = { version = "0.97.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
reqwest = { version = "0.12.9", features = ["json"] }
