[package]
name = "crust_config"
version = "0.1.0"
edition = "2021"

[dependencies]
crust_core = { path = "../crust_core" }
reqwest = "0.12.12"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.9.0"
