[package]
name = "crust_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"

[features]
byzantine = []
confidentiality = []
integrity = []
access_control = []
all_security = ["byzantine", "confidentiality", "integrity", "access_control"]
constraints = []
reversible = []
batch = []
